--- a/style.css
+++ b/style.css
@@ -61,13 +61,61 @@ body {
     height: auto;  
 }
 
-.header, .one, .four {
-    padding-left: 100px;
-    padding-right: 100px;
+.header, .one {
+    padding: 10px;
+    padding-bottom: 100px;
+}
+
+ .four {
+    padding: 100px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.box {
+    background-color: #3882F6;
+    border-radius: 15px;
+    height: auto;
+    padding: 100px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.box button {
+    border-radius: 15px;
+    width: 100px;
+    height: 50px;
+    background-color: #3882F6;
+    border: 2px solid white;
+    color: white;
 }
 
 .Links a{
     padding: 12px;
+}
+
+.author {
+    justify-content: right;
+    text-align: right;
+    padding-right: 100px;
+    padding-bottom: 100px;
+    font-size: 36px;
+    font-weight: bolder;
+    flex: 1;
+    width:auto;
+}
+
+.body {
+    flex: 1;
+    font-size: 36px;
+    height: auto;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 50px;
 }
 
 
@@ -81,7 +129,7 @@ body {
 .three {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: right;
 }
 
 .pic-container {
@@ -100,7 +148,8 @@ body {
 .three {
     background-color: #e5e7eb;
 }
-
+/*
 div {
     border: 2px solid grey;
-}
+}*/
+
