--- a/style.css
+++ b/style.css
@@ -1,54 +1,3 @@
-/*
-
-.header, .footer {
-    background: rgb(13, 37, 51);
-    color: white; 
-    display: flex;
-}
-
-
-.footer {
-    justify-content: center;
-}
-
-.one, .two, .three, .four {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-
-.one {
-    background: rgb(13, 37, 51); 
-    color: white;
-    flex-direction: row;
-    justify-content: center; 
-}
-
-.two {
-    background: white;
-}
-
-.three {
-    background: grey;
-}
-
-.four {
-    background: white;
-}
-
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background: black;
-}
-
-div, p {
-    border: 2px solid red;
-}
-
-*/
 body {
     background-color: black;
 }
@@ -56,13 +5,22 @@ body {
 .header, .footer, .one {
     background-color: #1f2937;
     display: flex;
+    color: white;
     align-items: center;
     justify-content: space-between;  
     height: auto;  
 }
 
+.footer {
+    font-size: 25px;
+    padding:25px; 
+}
+
 .header, .one {
     padding: 10px;
+    font-size: 25px;
+    padding-right:100px;
+    padding-left:100px;
     padding-bottom: 100px;
 }
 
@@ -124,8 +82,49 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 100px;
 }
 
+.pic-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: auto;
+    gap: 25px;
+    bottom: 0;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.pic-text{
+    display: flex;
+    width:auto;
+    gap: 25px;
+    flex-direction: row;
+    padding: 10px;
+    justify-content: center;
+    
+}
+
+.pic-text > div {
+    align-items: center;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    
+    flex: 1;
+    
+}
+
+.pic-container > div{
+    border: 2px solid #3882F6;
+    border-radius: 15px;
+    display: flex;
+    height:100px;
+    width:100px;
+    flex: 1; 
+    justify-content: space-between;
+    
+}
 .three {
     display: flex;
     flex-direction: column;
@@ -152,4 +151,5 @@ body {
 div {
     border: 2px solid grey;
 }*/
+
 
