This is pretty much the final product. Section one is done Just need to change the text when I feel like it.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
     height: auto;  
 }
 
+.Links >  a {
+    text-decoration: none;
+    color: white;
+}
+
 .footer {
     font-size: 25px;
     padding:25px; 
@@ -147,9 +152,43 @@ body {
 .three {
     background-color: #e5e7eb;
 }
-/*
-div {
+
+.one {
+    display: flex;
+    justify-content: space-between
+}
+
+.left {
+    width: 350px;
+    height: 150px;
+    
+}
+
+.left > button {
+    border: 2px solid #3882F6;
+    background-color: #3882F6;
+    border-radius: 15px;
+    width: auto; 
+    height: 15%;
+    color: white;
+}
+
+
+.left > h3 {
+    font-size: 20px;
+}
+
+.left > div {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.right {
+    width: 300px;
+    height: 150px;
     border: 2px solid grey;
-}*/
+    background-color: grey;
+    text-align: center;
+}
 
 
